# hw_video_analysis

./: CMakeLists.txt  hw_video_analysis.cpp
cmake/: 3rdparty.cmake  config.cmake
config-cmake/: find_boost.cmake  find_caffe_gpu.cmake  find_cuda.cmake  find_cz_common.cmake  find_cz_ml.cmake  find_eigen.cmake  find_ffmpeg.cmake  find_freetype.cmake  find_gflags.cmake  find_glog.cmake  find_gtest.cmake  find_opencv.cmake  find_protobuf.cmake  find_toolbox.cmake
data/: res.txt
data/params/: README.md  UIParamInfo.ini  event_monitor.ini  obj_detector.ini  obj_tracker.ini  regiondesc.xml  video_analyzer.ini
include/: hw_calibration_reader.h  hw_event_monitor.h  hw_info.h  hw_obj_detector.h  hw_obj_tracker.h  hw_process_regulator.h  hw_video_analyzer.h  hw_video_display.h  utils_funcs.h
include/contrib/: tinyxml2.h
src/: hw_calibration_reader.cpp  hw_event_monitor.cpp  hw_obj_detector.cpp  hw_obj_tracker.cpp  hw_process_regulator.cpp  hw_video_analyzer.cpp  hw_video_display.cpp  utils_funcs.cpp
src/contrib/: tinyxml2.cpp
